--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.10",
